[tool.poetry]
name = "smartcab-rpicam"
version = "0.1.0"
description = "Raspberry Pi webcam linker"
authors = ["Alchemmist <anton.ingrish@gmail.com>", "Mark Meliksetyan <markmelix@gmail.com>"]
packages = [{include = "rpicam"}]


[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
redis = {extras = ["hiredis"], version = "^5.0.2"}
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
